# isolinear

./: .gitignore  LICENSE  README.md  Sub2.re  SubscriptionRunner.rei  azure-pipelines.yml  dune-project  package.json  test.json
.ci/: esy-build-steps.yml  esy-check-hygiene.yml
esy.lock/: index.json
src/: Effect.re  Effect.rei  Isolinear.re  Isolinear.rei  Isolinear_Types.re  Pipe.re  Pipe.rei  Redux.re  Redux.rei  Redux_Types.re  Store.re  Store.rei  Stream.re  Sub.re  Sub.rei  Sub_Internal.re  Sub_Internal2.re  Sub_internal.re  SubscriptionRunner.re  Updater.re  Updater.rei  dune
test/: IsolinearTests.re  StoreTests.re  SubscriptionRunnerTests.re  TestFramework.re  dune
test.esy.lock/: index.json
